------------------------------
AmiSSL Open Source - ChangeLog
------------------------------

$Id$
$URL$

2014-09-05 Jens Maus <mail@jens-maus.de>

  * misc: general cleanup to make the sources more compatible to programming
    style of OpenSSL (e.g. definition of OPENSSL_SYS_AMIGA). Thus, the sources
    should produce way nicer diffs against the upstream sources of OpenSSL.
    Also removed support for SAS/C builds as it is anyway way to broken now and
    will never be used again.

2014-09-04 Jens Maus <mail@jens-maus.de>

  * misc: reverted some basic changes which prevented the OS4 build to be linked
    properly. In addition the OS3 build also complained about missing memcpy()
    functions which pointed out that there was a general build system problem. We
    are quite near now to get a linked os3 binary of amissl.library.

2014-09-03 Jens Maus <mail@jens-maus.de>

  * misc: after finally being able to convert the os3 sfd file to proper clib and
    inline files applied some changes to get AmiSSL compiled for OS3/gcc. At least
    it compiles now until the first test binary. So lets see how fast we can solve
    that.

2014-08-27 Thore Böckelmann <tboeckel@gmx.de>

  * misc: lots of changes to get this beast buildable for AmigaOS3. This is
    definitely work in progress and not yet finished. At least libcmt is built
    successfully now, although there are still lots of warnings.

2014-08-17 Jens Maus <mail@jens-maus.de>

  * misc: merged the OpenSSL 1.0.1i vendor branch onto the trunk and adapted all
    AmiSSL sources accordingly.

2014-07-11 Jens Maus <mail@jens-maus.de>

  * Makefile, misc: largely reworked the top-level Makefile so that we will only have
    a single Makefile for compiling AmiSSL out-of-the-box rather than having to run
    several kind of shell scripts for different platforms and different debugging
    levels. This makefile now stores automatically generated data (object files and