@@ -7,6 +7,7 @@
 
 #include <stdio.h>
 #include <dos.h>
+#include <proto/exec.h>
 
 extern int __io2errno(int);
 extern void initialize_socket_errno(void);
